<resources>

    <string name="app_name">Сделай город</string>

    <!-- Titles -->
    <string name="feed">Проблемы</string>
    <string name="notifications">Уведомления</string>
    <string name="menu">Меню</string>
    <string name="auth">Авторизация</string>
    <string name="title_edit_profile">Редактирование профиля</string>

    <!-- Menu -->
    <string name="profile">Профиль</string>
    <string name="settings">Настройки</string>
    <string name="exit">Выход</string>
    <string name="help">Помощь</string>
    <string name="support_project">Поддержать проект</string>
    <string name="about_project">О проекте</string>
    <string name="partners">Партнеры</string>
    <string name="archive_problems">Архив проблем</string>
    <string name="sign_in">Войти</string>

    <!-- Splash Screen -->
    <string name="splash_retry">Попробовать снова</string>
    <string name="splash_search_connection">Идет поиск сети</string>

    <!-- Map Screen -->
    <string name="map_not_connection">Нет соединения</string>

    <string name="map_error_find_location">Ваше местоположение не найдено</string>

    <string name="map_loading">Загрузка</string>
    <string name="map_wait_loading">Указать вручную</string>

    <string name="map_define">Определяем</string>
    <string name="map_choose_place">Выберите место</string>

    <string name="map_too_far">Слишком далеко</string>
    <string name="map_specify">Указать вручную</string>

    <!-- About -->
    <string name="about_content"><![CDATA["Сделай город" - это интерактивная карта города, где каждый может оставить идею или предложение по улучшению городской среды.
\n\nОн носит исключительно информационно рекомендательный характер и призван для:
\n\n1. Выявления и обсуждения городских проблем.
\n2. Повышения заинтересованности и вовлечения жителей в процесс преобразования города.
\n3. Освещения в СМИ проблем городской среды Для того чтобы оставить своё предложение нужно просто указать место на карте города.
\n\nДля того, чтобы ваше предложение заинтересовало большее количество горожан и было рассмотрено вы можете:
\n\n1. Указать более подробный адрес предложения.
\n2. Прикрепить до 2х фотографий с места.
\n3. Прикрепить видео о предложении.
\n4. Рассказать друзьям.
\n\nЕсли вам нравится наш проект, вы можете <a href=\"http://yasobe.ru/na/sdelaigorodru\">поддержать его</a>.]]></string>

    <!-- Auth -->
    <string name="auth_sms_title">SMS отправлено на номер<![CDATA[<br /><b>%1$s</b>]]></string>
    <string name="auth_sms_description">Повторная отправка кода в SMS возможна через %1$d секунд</string>
    <string name="auth_phone_description">Проходя процедуру авторизации вы соглашайтесь с политикой конфиденциальности</string>
    <string name="auth_phone_title">Войдите, чтобы получить новые возможности</string>
    <string name="input_phone">Введите телефон</string>
    <string name="input_code">Введите код</string>
    <string name="input_password">Введите пароль</string>
    <string name="make_password">Придумайте пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="location">Местоположение</string>
    <string name="images">Изображения</string>
    <string name="show_more">Показать еще</string>
    <string name="comments">Комментарии</string>

    <!-- CreateProblem -->
    <string name="loading_data">Загрузка данных…</string>
    <string name="preview">Предосмотр</string>
    <string name="problem_description">Описание проблемы</string>
    <string name="description">Описание</string>
    <string name="choose_category">Выбрать категорию</string>
    <string name="choose_company">Выбрать исполнителя</string>
    <string name="category">Категория</string>
    <string name="company">Организация</string>
    <string name="service">Услуга</string>
    <string name="restore_problem">В вашем черновике уже есть задача</string>
    <string name="description_is_empty">Описание отсутствует</string>
    <string name="images_not_founded">Изображения отсутствуют</string>
    <string name="location_not_founded">Информация о местоположении отсутствует</string>
    <string name="add">Добавить</string>
    <string name="guest">Гость</string>
    <string name="add_profile">Добавить аккаунт</string>
    <string name="show_profile">Перейти в профиль</string>
    <string name="name_undefined">Имя неизвестно</string>
    <string name="anonymous">Аноним</string>
    <string name="name_format">%1$s %2$s</string>
    <string name="need_auth">Необходимо авторизоваться!</string>
    <string name="cities">Выберите город</string>
    <string name="gender">Пол</string>
    <string name="city">Город</string>
    <string name="undefined_symbol">-</string>
    <string name="phone">Телефон</string>
    <string name="save">Сохранить</string>
    <string name="updating_profile">Обновление профиля</string>
    <string name="need_auth_for_add_task">Для создания задачи необходимо авторизоваться!</string>
    <string name="error">Ошибка</string>
    <string name="later">Позже</string>

    <string name="second_name">Фамилия</string>
    <string name="input_family">Введите фамилию</string>

    <string name="full_name">Полное имя</string>
    <string name="first_name">Имя</string>
    <string name="input_name">Введите имя</string>

    <string name="street">Улица</string>
    <string name="input_street">Укажите улицу</string>

    <string name="house">Дом</string>
    <string name="input_house">Укажите дом</string>

    <string name="sex">Пол</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="address">Адрес</string>
</resources>
