<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map_coordinator_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.main.MainActivity">

    <android.support.constraint.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.makecity.client.presentation.map.MapPointsView
            android:id="@+id/map_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/map_show_as_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_view_list_gray_24dp"
            app:fabSize="mini"
            app:useCompatPadding="true"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_map_connection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_base_lower_half"
            android:layout_marginEnd="@dimen/space_base_lower_half"
            android:layout_marginBottom="@dimen/space_base_lower_half"
            android:alpha="0"
            android:scaleX="0"
            android:scaleY="0"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/map_not_connection"
            android:textColor="@color/text_dark_main"
            android:textSize="@dimen/several_title"
            app:layout_constraintBottom_toTopOf="@id/map_group_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/map_group_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:alpha="0"
            android:scaleX="0"
            android:scaleY="0"
            app:layout_constraintBottom_toTopOf="@+id/guideline_center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_map_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/map_loading"
                android:textColor="@color/text_dark_main"
                android:textSize="@dimen/large_title" />

            <TextView
                android:id="@+id/text_map_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/text_dark_secondary"
                android:gravity="center"
                android:text="@string/map_wait_loading"
                android:textSize="@dimen/text_description" />

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/map_button_add_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/shape_white_corner_big"
            android:fontFamily="@font/roboto_bold"
            android:foreground="@drawable/ripple_main_light_secondary"
            app:cardCornerRadius="27dp"
            app:cardElevation="4dp"
            app:contentPaddingBottom="16dp"
            app:contentPaddingLeft="26dp"
            app:contentPaddingRight="36dp"
            app:contentPaddingTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_add_white_24dp"
                android:drawablePadding="@dimen/space_base_lower_half"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/add"
                android:textColor="@color/text_dark_main"
                android:textSize="16sp" />

        </android.support.v7.widget.CardView>

        <android.support.constraint.Guideline
            android:id="@+id/guideline_center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />
    </android.support.constraint.ConstraintLayout>

    <ImageButton
        android:id="@+id/map_menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/space_base"
        android:src="@drawable/ic_menu_gray_24dp" />

    <include
        android:id="@+id/bottom_problems"
        layout="@layout/bottom_sheet_problems"/>

</android.support.design.widget.CoordinatorLayout>