<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="175dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:background="@color/colorScreen"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarLayoutExpandedTextStyle"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed|snap"
            app:toolbarId="@+id/toolbar">

            <LinearLayout
                android:id="@+id/menu_profile_cell"
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:paddingRight="32dp"
                android:paddingLeft="32dp"
                app:layout_collapseMode="parallax">

                <LinearLayout
                    android:id="@+id/menu_profile_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/menu_profile_image"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:src="@drawable/placeholder_face" />

                    <Space
                        android:layout_width="@dimen/space_base"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/menu_profile_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_bold"
                            android:textColor="@color/text_dark_main"
                            android:textSize="22sp"
                            android:maxLines="2"
                            android:text="@string/guest"/>

                        <TextView
                            android:id="@+id/menu_profile_action"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_medium"
                            android:textColor="@color/text_dark_secondary"
                            android:drawableEnd="@drawable/ic_chevron_right_accent_24dp"
                            android:textSize="14sp"
                            android:gravity="center"
                            android:text="@string/add_profile"/>

                    </LinearLayout>

                </LinearLayout>

                <ProgressBar
                    android:id="@+id/menu_profile_loader"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_corner_top"
        android:paddingTop="@dimen/space_base"
        app:behavior_overlapTop="@dimen/space_base_greater_single"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_dark_main"
                android:fontFamily="@font/roboto_bold"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingTop="@dimen/space_base_lower_half"
                android:paddingBottom="@dimen/space_base_lower_half"
                android:textSize="28sp"
                android:text="@string/menu"/>

            <LinearLayout
                android:id="@+id/menu_container_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
