<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarLayoutExpandedTextStyle"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/face_placeholder_bg"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        app:behavior_overlapTop="32dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/space_base_greater_half">


                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/text_dark_main"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Andrew Chupin" />

                <TextView
                    android:id="@+id/profile_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/text_dark_secondary"
                    android:textSize="16sp"
                    tools:text="+7 (904) 279-74-31" />

                <TextView
                    android:id="@+id/profile_city_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/space_base_greater_half"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/text_dark_main"
                    android:textSize="18sp"
                    android:text="@string/city" />

                <TextView
                    android:id="@+id/profile_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/space_base_quarter"
                    android:fontFamily="@font/roboto_light"
                    android:textColor="@color/text_dark_main"
                    android:textSize="16sp"
                    tools:text="Ижевск" />


                <TextView
                    android:id="@+id/profile_address_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/space_base_greater_half"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/text_dark_main"
                    android:textSize="18sp"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/profile_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/space_base_quarter"
                    android:fontFamily="@font/roboto_light"
                    android:textColor="@color/text_dark_main"
                    android:textSize="16sp"
                    tools:text="ул. Кедра Митрея, 66" />

                <TextView
                    android:id="@+id/profile_gender_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/space_base_greater_half"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/text_dark_main"
                    android:textSize="18sp"
                    android:text="@string/gender" />

                <TextView
                    android:id="@+id/profile_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/space_base_quarter"
                    android:paddingBottom="@dimen/space_base"
                    android:fontFamily="@font/roboto_light"
                    android:textColor="@color/text_dark_main"
                    android:textSize="16sp"
                    tools:text="Мужской" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/space_base">

                    <TextView
                        android:id="@+id/profile_edit_profile_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="@dimen/space_base_lower_quarter"
                        android:paddingBottom="@dimen/space_base_lower_quarter"
                        android:textColor="@color/text_light_main"
                        android:textSize="15sp"
                        android:layout_marginBottom="@dimen/space_base"
                        android:text="Редактировать"
                        android:background="@drawable/shape_primary_corner"/>

                    <TextView
                        android:id="@+id/profile_logout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_marginTop="@dimen/space_base"
                        android:text="Выйти"
                        android:textAllCaps="true"
                        android:gravity="center"
                        android:textColor="@color/colorDangerous"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>